--- a/upload/admin/view/template/common/security_list.twig
+++ b/upload/admin/view/template/common/security_list.twig
@@ -44,7 +44,7 @@
                           <option value="{{ path }}">{{ path }}</option>
                         {% endfor %}
                       </select>
-                      <input type="text" name="storage" value="storage" placeholder="{{ text_path }}" id="input-storage" class="form-control w-50"/>
+                      <input type="text" name="name" value="storage" placeholder="{{ text_path }}" id="input-storage" class="form-control w-50"/>
                     </div>
                     <div class="form-text">{{ help_storage }}</div>
                   </div>
