--- a/upload/admin/view/template/cms/antispam_list.twig
+++ b/upload/admin/view/template/cms/antispam_list.twig
@@ -14,7 +14,7 @@
             <tr>
               <td class="text-center"><input type="checkbox" name="selected[]" value="{{ antispam.antispam_id }}" class="form-check-input"/></td>
               <td>{{ antispam.keyword }}</td>
-              <td class="text-end"><a href="{{ antispam.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="btn btn-primary"><i class="fa-solid fa-pencil"></i></a></td>
+              <td class="text-end"><a href="{{ antispam.edit }}" data-bs-toggle="tooltip" title="{{ button_edit }}" class="btn btn-primary"><span class="fa-solid fa-pencil"></span></a></td>
             </tr>
           {% endfor %}
         {% else %}
