--- a/upload/admin/view/template/tool/upload_list.twig
+++ b/upload/admin/view/template/tool/upload_list.twig
@@ -18,7 +18,7 @@
               <td>{{ upload.name }}</td>
               <td>{{ upload.code }}</td>
               <td class="text-end">{{ upload.date_added }}</td>
-              <td class="text-end"><a href="{{ upload.download }}" data-bs-toggle="tooltip" title="{{ button_download }}" class="btn btn-info"><i class="fa-solid fa-download"></i></a></td>
+              <td class="text-end"><a href="{{ upload.download }}" data-bs-toggle="tooltip" title="{{ button_download }}" class="btn btn-info"><i class="fa-solid fa-download"></span></a></td>
             </tr>
           {% endfor %}
         {% else %}
