--- a/upload/admin/view/template/setting/setting.twig
+++ b/upload/admin/view/template/setting/setting.twig
@@ -31,7 +31,7 @@
               <div class="accordion" id="accordion-general">
                 <div class="accordion-item">
                   <h2 class="accordion-header"><button type="button" class="accordion-button" data-bs-toggle="collapse" data-bs-target="#collapse-general">{{ text_general }}</button></h2>
-                  <div id="collapse-general" class="accordion-collapse show" data-bs-parent="#accordion-general">
+                  <div id="collapse-general" class="accordion-collapse collapse show" data-bs-parent="#accordion-general">
                     <div class="accordion-body">
                       <ul class="nav nav-tabs">
                         {% for language in languages %}
