--- a/upload/admin/view/template/catalog/attribute.twig
+++ b/upload/admin/view/template/catalog/attribute.twig
@@ -15,6 +15,7 @@
     </div>
   </div>
   <div class="container-fluid">
+    <div id="alert"></div>
     <div class="card">
       <div class="card-header"><i class="fa-solid fa-list"></i> {{ text_list }}</div>
       <div id="list" class="card-body">{{ list }}</div>
