--- a/upload/admin/view/template/common/security_list.twig
+++ b/upload/admin/view/template/common/security_list.twig
@@ -49,7 +49,7 @@
                     <div class="form-text">{{ help_storage }}</div>
                   </div>
                   <div class="text-end">
-                    <button type="button" id="button-storage" class="btn btn-danger"><span class="fa-solid fa-circle-right"></span> {{ button_move }}</button>
+                    <button type="submit" id="button-storage" class="btn btn-danger"><span class="fa-solid fa-circle-right"></span> {{ button_move }}</button>
                   </div>
                 </form>
               </div>
@@ -89,7 +89,7 @@
                     </div>
                   </div>
                   <div class="text-end">
-                    <button type="button" id="button-admin" class="btn btn-danger"><i class="fa-solid fa-circle-right"></i> {{ button_move }}</button>
+                    <button type="submit" id="button-admin" class="btn btn-danger"><i class="fa-solid fa-circle-right"></i> {{ button_move }}</button>
                   </div>
                 </form>
               </div>
